--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<H1>Success</H1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Static Pgae</title>
+</head>
+<body>
+    <h1>Hello, GitHub Pages!</h1>
+    <p>Success</p>
+</body>
+</html>
+
