Fix typo in page title from 'Pgae' to 'Page'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Static Pgae</title>
+    <title>My Static Page</title>
 </head>
 <body>
     <h1>Hello, GitHub Pages!</h1>
