--- a/auth.html
+++ b/auth.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tasker Auth Redirect</title>
+    <title>Authenticating...</title>
 </head>
 <body>
-    <p>Redirecting to Tasker...</p>
-<a href="" id="taskerLink" style="padding: 20px; background: blue; color: white; display: block; text-align: center;">
-    Click here if not redirected
-</a>
-
-<script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const code = urlParams.get('code');
-    if (code) {
-        const taskerUrl = "tasker://task?name=GetToken&code=" + code;
-        // Try auto-redirect
-        window.location.href = taskerUrl;
-        // Set the button link just in case
-        document.getElementById('taskerLink').href = taskerUrl;
-    }
-</script>
-
+    <script>
+        // Extract token/code from URL fragment (OAuth2)
+        var hash = window.location.hash.substring(1);
+        // Redirect back to Tasker with the auth data
+        window.location.href = "tasker://auth?" + hash;
+    </script>
 </body>
 </html>
-
