--- a/auth.html
+++ b/auth.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Authenticating...</title>
+    <title>Tasker Auth</title>
+    <script>
+        window.onload = function() {
+            // Extracts the auth code from the URL and sends it to Tasker
+            const urlParams = new URLSearchParams(window.location.search);
+            const code = urlParams.get('code');
+            if (code) {
+                // Tasker looks for this specific format or a redirect
+                window.location.href = "tasker://auth?code=" + code;
+            }
+        }
+    </script>
 </head>
 <body>
-    <script>
-        // Extract token/code from URL fragment (OAuth2)
-        var hash = window.location.hash.substring(1);
-        // Redirect back to Tasker with the auth data
-        window.location.href = "tasker://auth?" + hash;
-    </script>
+    <p>Authenticating with Tasker... You can close this window if it doesn't close automatically.</p>
 </body>
 </html>
